--- a/Final_project/Report/neurips_2024.sty
+++ b/Final_project/Report/neurips_2024.sty
@@ -272,10 +272,10 @@
     \@bottomtitlebar
     \if@submission
       \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}
-        Anonymous Author(s) \\
-        Affiliation \\
-        Address \\
-        \texttt{email} \\
+        Matthew Collins \\
+        Department of Computer Science \\
+        Clemson University \\
+        \texttt{mbc3@clemson.edu} \\
       \end{tabular}%
     \else
       \def\And{%
